# docs/swagger.json
@@ -721,6 +721,116 @@
                 }
             }
         },
+        "/api/notes": {
+            "get": {
+                "description": "留言列表",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "留言"
+                ],
+                "summary": "获取留言列表",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "pageNum",
+                        "name": "pageNum",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "pageSize",
+                        "name": "pageSize",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Note"
+                        }
+                    },
+                    "400": {
+                        "description": "{ \"code\": 400, \"message\": \"请求失败\" }",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "创建留言",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "留言"
+                ],
+                "summary": "创建留言列表",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Note"
+                        }
+                    },
+                    "400": {
+                        "description": "{ \"code\": 400, \"message\": \"请求失败\" }",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/notes/{id}": {
+            "delete": {
+                "description": "留言列表",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "留言"
+                ],
+                "summary": "删除留言列表",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Note"
+                        }
+                    },
+                    "400": {
+                        "description": "{ \"code\": 400, \"message\": \"id必传\" }",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/upload": {
             "post": {
                 "description": "文件上传",
@@ -733,11 +843,49 @@
                 "tags": [
                     "文件上传"
                 ],
-                "summary": "文件上传",
+                "summary": "单个文件上传",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "file",
+                        "name": "file",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{ \"code\": 200, \"message\": \"上传成功\" }",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "{ \"code\": 400, \"message\": \"请求失败\" }",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/uploads": {
+            "post": {
+                "description": "多文件上传",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "多文件上传"
+                ],
+                "summary": "多个文件上传",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "upload",
                         "name": "file",
                         "in": "query",
                         "required": true
@@ -967,6 +1115,26 @@
                 }
             }
         },
+        "model.Note": {
+            "type": "object",
+            "properties": {
+                "context": {
+                    "type": "string",
+                    "example": "留言"
+                },
+                "icon": {
+                    "type": "string",
+                    "example": "用户头像"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "userName": {
+                    "type": "string",
+                    "example": "用户名称"
+                }
+            }
+        },
         "model.User": {
             "type": "object",
             "properties": {
@@ -994,6 +1162,9 @@
                 "telephone": {
                     "type": "string",
                     "example": "手机号码"
+                },
+                "themeColor": {
+                    "type": "string"
                 }
             }
         },
